@@ -1,5 +1,6 @@
 === ongoing ===
 
+- Exchanged dependency of cmsplugin-blog for django-multilingual-news
 
 === 0.2.1 ===
 
